FIX: Accessibility - improve text contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ li {
 }
 
 .nav-links a {
-  color: #444;
+  color: #222;
   text-decoration: none;
   font-weight: 700;
   font-size: 1.125rem;
